# cuGJE

./: CMakeLists.txt  README.md  bench_cugjed.cu  bench_cugjes.cu  checkcuda.h  cugje.cu  cugje.h  cugje_traits.h  example_cugje.cu  example_cugjec.cu  example_cugjed.cu  example_cugjes.cu  example_cugjez.cu
